--- a/main/_config.yml
+++ b/main/_config.yml
@@ -28,7 +28,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: hitchens-theme
+theme: minima
 plugins:
   - jekyll-feed
 
